Added more to about.html

--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
 #header_photo {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 20em;
+  justify-content: space-evenly;
 }
 
 #title_holder {
@@ -82,12 +81,26 @@ a {
 }
 
 h1  {
+  font-size: 4.5vw;
+}
+
+h2 {
   font-size: 3.5vw;
 }
 
 h3 {
-  font-size: 1.5vw;
+  font-size: 2.5vw;
 }
+
+h4 {
+  font-size: 1.8vw;
+}
+
+.portrait_text h4, h3 {
+  margin:0;
+  margin-bottom: 0.4em;
+}
+
 
 footer a {
   color: black;
@@ -120,16 +133,38 @@ footer a {
 }
 
 /*Kanske onödigt?*/
+/*
 main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+*/
 
 
 .class_image {
   max-width: 100%;
+  height: auto;
+  float: left;
+}
+
+.class_image_container {
+  margin-bottom: 5em;
+}
+
+.class_portrait_container {
+  display: flex;
+  align-items: center;
+  gap: 1vw;
+  margin-bottom: 5em;
+  border: 0.2em solid black;
+  padding: 1em;
+  border-radius: 1em;
+}
+
+.portrait {
+  max-width:50%;
   height: auto;
   float: left;
 }
@@ -143,4 +178,14 @@ p {
   font-size: 1vw;
   margin-top: 0.5vw;
   
+}
+
+footer a:hover {
+  font-style: italic;
+}
+
+.class_container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5em;
 }
